--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="us.png">
 
 </head>
 
